@@ -47,6 +47,8 @@
 * 1.3   mus    08/14/17  Do not perform cache operations if CCI is enabled
 * 1.4   adk    11/02/17  Updated example to fix compilation errors for IAR
 *			 compiler.
+* 1.7   adk    18/03/19  Update the example data verification check to support
+*			 versal adma IP.
 * </pre>
 *
 ******************************************************************************/
@@ -245,8 +247,13 @@ int XZDma_WriteOnlyExample(u16 DeviceId)
 		}
 	}
 	else { /* For ADMA */
+#ifdef versal
+		for (Index = 0; Index < (SIZE/4)/4; Index++) {
+			for (Index1 = 0; Index1 < 4; Index1++) {
+#else
 		for (Index = 0; Index < (SIZE/4)/2; Index++) {
 			for (Index1 = 0; Index1 < 2; Index1++) {
+#endif
 				if (SrcBuf[Index1] != *Buf++) {
 						return XST_FAILURE;
 				}
